# StableDiffusionKit_FastAPI

./: Makefile  README.md  pyproject.toml
app/: config.ini  config.py  server.py
app/routes/: image.py
