[tool.poetry]
name = "stablediffusiontest"
version = "0.1.0"
description = ""
authors = ["jperedo <peredo01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
diffusionkit = "^0.4.0"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
torch = "2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
